golden/error/_import_cycle_a.rcl
import "_import_cycle_b.rcl"
